# sdata

./: .codacy.yml  .coveralls.yml  .gitignore  .travis.yml  CHANGELOG.md  LICENSE-MIT  MANIFEST.in  Makefile  PITCHME.md  README.md  RELEASING.md  create_pyc_egg.py  db.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  t.py  tox.ini  upload_pypi.sh
ci/: local-ci.sh
doc/: README.md
docs/: Makefile  api.md  index.html  index.md  releasing.md  requirements.txt
ipynb/: Das_sdata_Format.ipynb  Das_sdata_Format.slides.html  Das_sdata_Format1.ipynb  Parameter-Dict-Fitting-Swift.ipynb  Parameter-Distribution.ipynb  Parameter.ipynb  Pud.ipynb  Untitled.ipynb  Untitled2.ipynb  asciify.ipynb  base.ipynb  bfo_classes.ipynb  blob.ipynb  data_rsa.ipynb  dataframe.ipynb  datagraph.ipynb  db_name.dot  filegroup.ipynb  hashtree-folder.ipynb  hierarchical.db  hierarchical_db.ipynb  index.sqlite  index.sqlite.dot  index.sqlite_no_types.dot  json1sqlitestore.ipynb  loremipsum.ipynb  my_data.xlsx  nist_MedMnSteel_gist.ipynb  plot_numisheet_2020.ipynb  plot_numisheet_2020_tensiontest.ipynb  process.ipynb  read_numisheet_2020-Copy3.ipynb  read_numisheet_2020b.ipynb  sdata Schema.ipynb  sdata-dataframe.ipynb  sdata.Blob.ipynb  sdata.Workbook.ipynb  sdata_Image.ipynb  sdata_attributes.ipynb  sdata_hdf5.ipynb  (+19 more)
ns/: context.jsonld
sdata/: __init__.py  base.py  blob.py  data.py  dataframe.py  doe.py  dtypes.py  filegroup.py  image.py  image_old.py  imagemeta.py  interactive.py  metadata.py  node.py  parameter.py  parameters_deprecated.py  process.py  schema.py  semantic.py  suuid.py  timestamp.py  tools.py  units.py  vocab.py  workbook.py
src/: .coverage  requirements.txt  setup.py  tox.ini  upload_pypi.sh
streamlit/: editor.py  requirements.txt  sdata_editor.py
t/: secret1
test/: test_data.py
tests/: test_attribute.py  test_base.py  test_base_coverage.py  test_blob.py  test_data.py  test_did.py  test_did_coverage.py  test_doe_coverage.py  test_dtypes.py  test_eddsa.py  test_http_backend.py  test_image.py  test_imagemeta.py  test_interactive.py  test_io.py  test_ks2.py  test_metadata.py  test_metadata_coverage.py  test_parameter.py  test_parameter_coverage.py  test_schema.py  test_sclass_blob_coverage.py  test_sclass_blob_hardening.py  test_sclass_blob_io.py  (+37 more)
(+204 files in other folders)
