[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Nur die eigene Testsuite kollektieren; vendored contrib-Tests (z. B.
# sdata/contrib/ecdsa/test_*.py) bewusst ausschliessen.
testpaths = ["tests"]

[tool.coverage.run]
source = ["sdata"]
omit = [
    # Vendored Third-Party-Libs (nicht Teil der eigenen Coverage)
    "sdata/contrib/*",
    # Test-/Hilfsdateien
    "*/tests/*",
    "sdata/test/*",
    # Deprecated / experimentell / WIP / Netzwerk — bewusst ausgeblendet
    "sdata/deprecated/*",   # Data (ersetzt durch sdata.sclass.dataframe.DataFrame)
    "sdata/experiments/*",
    "*_old.py",
    "*_deprecated.py",
    "sdata/node.py",
    "sdata/iolib/minio.py",
    "sdata/iolib/db.py",       # WIP TinyDB-Wrapper (undeklariert, ungenutzt)
    "sdata/iolib/hdf.py",      # optionales PyTables-Backend (sdata[hdf])
    "sdata/iolib/vault.py",    # HDF5-/PyTables-Vault (sdata[hdf]) + deprecated Data; im CI nicht installiert
    "sdata/iolib/isomme.py",
    "sdata/iolib/rsa.py",
    "sdata/iolib/tinydb_json1sqlite.py",
    "sdata/iolib/simple_signature.py",
    "sdata/iolib/owncloudfs.py",
    "sdata/iolib/pgp.py",
    "sdata/sclass/bfo_classes.py",
    "sdata/sclass/process.py",
    "sdata/sclass/process_graph.py",
    "sdata/sclass/image.py",   # Image(Blob); optionales Pillow-Backend (nicht als CI-Dep deklariert)
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
